# portfolio

./: CMakeLists.txt  README.md
.github/workflows/: build.yml  docs.yml
docs/: _config.yml
examples/: CMakeLists.txt  data_feed.cpp  evolutionary_algorithm.cpp  evolutionary_algorithm_nsga2.cpp  evolutionary_algorithm_spea2.cpp  example_cost_portfolio.cpp  example_previous_portfolio.cpp
source/: CMakeLists.txt
source/portfolio/: evolutionary_algorithm.cpp  evolutionary_algorithm.h  market_data.cpp  market_data.h  market_data_mad.cpp  market_data_mad.h  naive_EA.cpp  naive_EA.h  portfolio.cpp  portfolio.h  portfolio_mad.cpp  portfolio_mad.h  random_search.cpp  random_search.h  spea2_algorithm.cpp  spea2_algorithm.h
source/portfolio/common/: algorithm.cpp  algorithm.h
source/portfolio/core/: ohlc_prices.cpp  ohlc_prices.h
source/portfolio/data_feed/: alphavantage_data_feed.cpp  alphavantage_data_feed.h  data_feed.cpp  data_feed.h  data_feed_result.cpp  data_feed_result.h  mock_data_feed.cpp  mock_data_feed.h
source/portfolio/json/: json.cpp  json.h
source/portfolio/matplot/: pareto_front.cpp  pareto_front.h
source/portfolio/problem/: problem.cpp  problem.h
source/portfolio/problem/return/: portfolio_return.cpp  portfolio_return.h  portfolio_return_mean.cpp  portfolio_return_mean.h  portfolio_return_mean_cost.cpp  portfolio_return_mean_cost.h
source/portfolio/problem/risk/: portfolio_risk.cpp  portfolio_risk.h  portfolio_risk_mad.cpp  portfolio_risk_mad.h
tests/benchmarks/: CMakeLists.txt  data_feed_benchmark.cpp  nsga2_portfolio_benchmark.cpp  random_portfolio_benchmark.cpp
tests/unit_tests/: CMakeLists.txt  ut_data_feed.cpp  ut_portfolio.cpp  ut_portfolio_json.cpp
